// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating nextjs stats 15 matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nextjs-v15-client-array-push",
  "bundler": {
    "name": Any<String>,
    "version": Any<String>,
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": Any<String>,
  "plugin": {
    "name": StringMatching "@codecov/nextjs-webpack-plugin",
    "version": Any<String>,
  },
  "version": Any<String>,
}
`;

exports[`Generating nextjs stats 15 matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nextjs-v15-server-cjs",
  "bundler": {
    "name": Any<String>,
    "version": Any<String>,
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": Any<String>,
  "plugin": {
    "name": StringMatching "@codecov/nextjs-webpack-plugin",
    "version": Any<String>,
  },
  "version": Any<String>,
}
`;

exports[`Generating nextjs stats 15 matches the snapshot 3`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nextjs-v15-edge-server-array-push",
  "bundler": {
    "name": Any<String>,
    "version": Any<String>,
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": Any<String>,
  "plugin": {
    "name": StringMatching "@codecov/nextjs-webpack-plugin",
    "version": Any<String>,
  },
  "version": Any<String>,
}
`;
